rename bot from ortakash-bot to telefonni-narxlovchi-bot

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ortakash-bot",
+  "name": "telefonni-narxlovchi-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
