--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "express-rate-limit": "^7.5.0",
+    "mongoose": "^8.15.0",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
